# ceramic

./: .gitignore  README.md  ceramic.conf  db.sqlite3  pyproject.toml
config/: ceramic.conf  gunicorn.config.py
configs/: .settings.py.swp  prod_settings.py  settings.py  settings.py.save  urls.py
loginapp/: admin.py  apps.py  decorators.py  forms.py  models.py  services.py  services.py.save  tasks.py  urls.py  views.py  views.py.save  whatcman_views.py
loginapp/migrations/: 0001_alter_visit_options_alter_visit_arrival_time_and_more.py  0001_initial.py  0001_visit_working_time.py  0002_alter_uniquelink_code.py  0002_alter_visit_leaving_time.py  0002_remove_visit_working_time.py  0002_uniquelink.py  0003_alter_visit_leaving_time.py  initial.py
loginapp/static/css/: style.css
loginapp/templates/loginapp/: 404.html  admin.html  base.html  check.html  login.html  qr.html  room.html  success.html
