[tool.poetry]
name = "ceramic"
version = "0.1.0"
description = ""
authors = ["DarthZiel <Studerzhan@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2"
qrcode = "^7.4.2"
apscheduler = "^3.10.1"
django-apscheduler = "^0.6.2"
pytz = "^2023.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
