[tool.poetry]
name = "ceramic"
version = "0.1.0"
description = ""
authors = ["Sophia"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
django = "^4.2.1"
qrcode = "^7.4.2"
apscheduler = "^3.10.1"
django-apscheduler = "^0.6.2"
pytz = "^2023.3"
openpyxl = "^3.1.2"
gunicorn = "^20.1.0"
django-background-tasks = "^1.2.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
