[tool.poetry]
name = "ceramic"
version = "0.1.0"
description = ""
authors = ["Sophia"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
django = "^4.2.1"
qrcode = "^7.4.2"
apscheduler = "^3.10.1"
django-apscheduler = "^0.6.2"
pytz = "^2023.3"
openpyxl = "^3.1.2"
gunicorn = "^20.1.0"
django-background-task = "^0.1.8"
celery = "^5.3.0"
django-celery-beat = "^2.5.0"
psycopg2-binary = "^2.9.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
